# bike-sharing-demand-forecasting

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: config.yaml  models.yaml
docs/: CMP4336-Project_Proposal-2103983-2103599-2102798.docx
docs/audit/: 2026-06-04_improvement-roadmap.md
docs/experiments/: 2026-06-01_leakage-safe-feature-sweep.json  2026-06-01_leakage-safe-feature-sweep.md  2026-06-04_validation-gap-diagnostics.json  2026-06-04_validation-gap-diagnostics.md  2026-06-05_dual-target.json  2026-06-05_dual-target.md  2026-06-05_env-recalibration-and-humidex.json  2026-06-05_env-recalibration-and-humidex.md  2026-06-05_peak-underprediction.json  2026-06-05_peak-underprediction.md  2026-06-05_xgb-gbm-tuning.json  (+1 more)
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_baseline_and_linear.ipynb  04_tree_models.ipynb  05_results_and_interpretation.ipynb
reports/: RESULTS.md  metrics.json
scripts/: _build_baseline_and_linear_notebook.py  _build_eda_notebook.py  _build_feature_engineering_notebook.py  _build_results_notebook.py  _build_tree_models_notebook.py  generate_submission.py  prepare_data.py  run_env_experiment.py  run_feature_experiment.py  run_gap_diagnostic.py  run_peak_experiment.py  train_dual_target.py  train_model.py  tune_model.py
tests/: test_data.py  test_dual_target.py  test_evaluate.py  test_experimental_transforms.py  test_explain.py  test_features.py  test_models.py  test_package.py  test_postprocess.py  test_predict.py  test_preprocessing.py  test_train.py
(+13 files in other folders)
